# verified-googledocs-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: PRD.md  acceptance-report.md  api-notes.md  architecture.md  cutover.md  fixture-session.md
scripts/: capture_fixtures.py  gcloud-bootstrap.sh
src/googledocs_mcp/: auth.py  comments.py  docs.py  markdown.py  markdown_mutations.py  middleware.py  mutations.py  server.py  suggestions.py  verify.py
src/verified_googledocs_mcp/: __main__.py  auth.py  comments.py  docs.py  index_sim.py  markdown.py  markdown_mutations.py  markdown_writer.py  middleware.py  server.py  suggestions.py  verify.py
tests/live/: README.md  conftest.py  test_comments.py  test_cross_cutting.py  test_markdown_writes.py  test_reads.py  test_replace_text.py  test_sync.py  test_workflows.py
tests/unit/: test_audit.py  test_auth.py  test_comment_tools_server.py  test_comments.py  test_contract_docs.py  test_diff_tab_vs_file.py  test_docs.py  test_envelope.py  test_index_sim.py  test_json_error_payloads.py  test_list_open_items.py  test_locate.py  test_markdown.py  test_markdown_tools.py  test_markdown_writer.py  test_middleware.py  test_range_evidence.py  test_replace_text.py  test_server.py  test_suggestions.py  test_tool_manifest.py  test_verify_helper.py
tests/unit/fixtures/: docs_api.py  document.json
tests/unit/fixtures/markdown_tools/: __init__.py
tests/unit/fixtures/suggestions/: docs_suggestions.py
