[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "googledocs-mcp"
version = "0.1.0"
description = "MCP server for Google Docs with verified writes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
googledocs-mcp = "googledocs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/googledocs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
