[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verified-googledocs-mcp"
version = "0.2.0"
description = "MCP server for Google Docs with verified writes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Michael Sutton" }]
keywords = ["mcp", "model-context-protocol", "google-docs", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "markdown-it-py>=3.0",
]

[project.urls]
Homepage = "https://github.com/michaelrobertsutton/verified-googledocs-mcp"
Repository = "https://github.com/michaelrobertsutton/verified-googledocs-mcp"
Issues = "https://github.com/michaelrobertsutton/verified-googledocs-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
verified-googledocs-mcp = "verified_googledocs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verified_googledocs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage runs on every invocation for a quick local signal; the hard floor
# (--cov-fail-under) is applied in CI so partial local runs don't fail.
addopts = "--cov=verified_googledocs_mcp --cov-report=term-missing"
markers = [
    "live: live acceptance tests against the real Google APIs; skipped unless --run-live is passed and OAuth credentials are present (never runs in CI). See tests/live/.",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
